--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FavoritesActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".FavoritesActivity" />
         <activity
             android:name=".SuggestionsActivity"
             android:label="@string/title_activity_suggestions"
