--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="eu.inowen.memebot">
+    package="eu.inowen.app">
 
     <application
         android:allowBackup="true"
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name="eu.inowen.app.gui.SettingsActivity"></activity>
         <activity
-            android:name=".SuggestionsActivity"
+            android:name="eu.inowen.app.gui.SuggestionsActivity"
             android:label="@string/title_activity_suggestions"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainMenu">
+        <activity android:name="eu.inowen.app.gui.MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
