--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".gui.ImageScrollActivity"></activity>
         <activity android:name=".testing.TestingActivity" />
         <activity android:name=".gui.SettingsActivity" />
         <activity
